tests/errors/papercut/cell-as-group.expect
---CODE---
1
---STDERR---
Error: tests/errors/papercut/cell-as-group.futil
9 |    save;
  |    ^^^^ Undefined group name: save
